correcting some z-index errors in Nav component

--- a/src/styles/MediosDePago.css
+++ b/src/styles/MediosDePago.css
@@ -6,7 +6,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .8);
-    z-index: 10;
+    z-index: 20;
 }
 
 .medios-de-pago-modal {
