--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -2,7 +2,7 @@
 .nav {
     background-color: var(--amarillo);
     box-shadow: 0 1px 0 0 rgb(0 0 0 / 10%);
-    z-index: 50;
+    z-index: 15;
     position: relative;
 }
 
