--- a/src/styles/NavHoverModal.css
+++ b/src/styles/NavHoverModal.css
@@ -5,7 +5,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 30;
+    z-index: 10;
     background-color: rgba(0, 0, 0, .3);
     animation: aparicionTenue .5s ease;
 }
